--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+
 :root {
   /* Dark Mode Colors */
   --bg: #151515;
@@ -14,11 +15,12 @@
   --font-fjall: 'Imbue', serif;
   background-color: var(--bg);
   color: var(--text-color);
-  
+
 }
-/* Light Mode Colors */
+
 
 :root.light{
+  /* Light Mode Colors */
   --bg: #FDFDFD;
   --secondary: #03A59B;
   --secondary-bg:#F6F6F6;
@@ -108,6 +110,10 @@ button:hover .download svg path {
 
 .fn{
   font-family: var(--font-epi);
+}
+.fn small{
+  color: grey;
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 600px) {
